--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <img class="logo" src="images/odin-lined.png" alt="odin logo">
                 <div class="logo-text">Odin</div>
             </div>
+            
+             <p class="photo-credit">Photo by Halie West on Unsplash</p>
         </div>
         <div class="content">
             <div class="intro">
